cmake_minimum_required(VERSION 2.8.10)

INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)

PROJECT(psplash C)

ADD_DEFINITIONS(-Wall -Wextra)
ADD_DEFINITIONS(-D_GNU_SOURCE)

SET(PSPLASH_SOURCES
	psplash.c
	psplash-console.c
	psplash-fb.c
)

SET(PSPLASH_WRITE_SOURCES
	psplash-write.c
)

ADD_EXECUTABLE(psplash ${PSPLASH_SOURCES})
SET_TARGET_PROPERTIES(psplash PROPERTIES OUTPUT_NAME psplash)

ADD_EXECUTABLE(psplash-write ${PSPLASH_WRITE_SOURCES})
SET_TARGET_PROPERTIES(psplash-write PROPERTIES OUTPUT_NAME psplash-write)

INSTALL(TARGETS psplash psplash-write
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION lib
	RUNTIME DESTINATION bin
)
